--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogging Bliss</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blogging Bliss</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to Blogging Bliss</h1>
-        <a href="login.html" class="btn btn-primary">Login</a>
-        <a href="signup.html" class="btn btn-secondary">Signup</a>
-        <p>About Us: A place to share your thoughts and experiences.</p>
-        <img src="blogging_image.jpg" alt="Blogging" class="img-fluid">
-    </div>
+  <div class="container">
+    <h1>Welcome to Blogging Bliss</h1>
+    <a href="login.html" class="btn btn-primary">Login</a>
+    <a href="signup.html" class="btn btn-secondary">Signup</a>
+    <p>About Us: A place to share your thoughts and experiences.</p>
+    <img src="blogging_image.jpg" alt="Blogging" class="img-fluid" />
+  </div>
 </body>
 </html>
