--- a/frontend/create_blog.html
+++ b/frontend/create_blog.html
@@ -32,9 +32,8 @@
     </form>
   </div>
 
+  <script src="config.js"></script>
   <script>
-    // Define the Render API base URL
-    const API_BASE_URL = "https://blogging-bliss.onrender.com/api";
 
     document.getElementById('createBlogForm').addEventListener('submit', function(event) {
       event.preventDefault();
