--- a/frontend/home.html
+++ b/frontend/home.html
@@ -14,8 +14,8 @@
     <div id="blogPosts" class="row"></div>
   </div>
   
+  <script src="config.js"></script>
   <script>
-    const API_BASE_URL = "https://blogging-bliss.onrender.com/api";
 
     // Fetch blogs from Render
     fetch(`${API_BASE_URL}/blogs`, { credentials: 'include' })
