--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -99,10 +99,8 @@
       </div>
     </div>
   </div>
-
+  <script src="config.js"></script>
   <script>
-    const API_BASE_URL = "https://blogging-bliss.onrender.com/api";
-
     // Fetch user profile
     fetch(`${API_BASE_URL}/profile`, { credentials: 'include' })
       .then(response => response.json())
