--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,8 +23,8 @@
     </form>
   </div>
 
+  <script src="config.js"></script>
   <script>
-    const API_BASE_URL = "https://blogging-bliss.onrender.com/api";
 
     document.getElementById('loginForm').addEventListener('submit', function(event) {
       event.preventDefault();
