--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -34,9 +34,8 @@
       <button type="submit" class="btn btn-primary">Signup</button>
     </form>
   </div>
-
+  <script src="config.js"></script>
   <script>
-    const API_BASE_URL = "https://blogging-bliss.onrender.com/api";
 
     document.addEventListener('DOMContentLoaded', () => {
       const today = new Date();
