--- a/frontend/view_blog.html
+++ b/frontend/view_blog.html
@@ -20,9 +20,8 @@
     <button id="addCommentButton" class="btn btn-primary">Submit Comment</button>
   </div>
 
+  <script src="config.js"></script>
   <script>
-    // Set the API base URL to your Render endpoint
-    const API_BASE_URL = "https://blogging-bliss.onrender.com/api";
 
     // Extract the blog ID from the query string
     const queryString = window.location.search;
