--- a/frontend/create_blog.html
+++ b/frontend/create_blog.html
@@ -32,7 +32,7 @@
     </form>
   </div>
 
-  <script src="config.js"></script>
+  <script src="src/config.js"></script>
   <script>
 
     document.getElementById('createBlogForm').addEventListener('submit', function(event) {
