--- a/frontend/home.html
+++ b/frontend/home.html
@@ -14,7 +14,7 @@
     <div id="blogPosts" class="row"></div>
   </div>
   
-  <script src="config.js"></script>
+  <script src="src/config.js"></script>
   <script>
 
     // Fetch blogs from Render
