--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,7 +23,7 @@
     </form>
   </div>
 
-  <script src="config.js"></script>
+  <script src="src/config.js"></script>
   <script>
 
     document.getElementById('loginForm').addEventListener('submit', function(event) {
