--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -99,7 +99,7 @@
       </div>
     </div>
   </div>
-  <script src="config.js"></script>
+  <script src="src/config.js"></script>
   <script>
     // Fetch user profile
     fetch(`${API_BASE_URL}/profile`, { credentials: 'include' })
