--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -34,7 +34,7 @@
       <button type="submit" class="btn btn-primary">Signup</button>
     </form>
   </div>
-  <script src="config.js"></script>
+  <script src="src/config.js"></script>
   <script>
 
     document.addEventListener('DOMContentLoaded', () => {
