--- a/frontend/view_blog.html
+++ b/frontend/view_blog.html
@@ -20,7 +20,7 @@
     <button id="addCommentButton" class="btn btn-primary">Submit Comment</button>
   </div>
 
-  <script src="config.js"></script>
+  <script src="src/config.js"></script>
   <script>
 
     // Extract the blog ID from the query string
